# PSE_PoC

./: .gitignore  CMakeLists.txt  README.md  app.h  cool_things.md  yolo_detection.cpp  yolo_detection.h
dependencies/imgui/: CMakeLists.txt
src/: app.cpp  app.h  async_queue.h  gui_app.cpp  gui_app.h  gui_app_base.cpp  gui_app_base.h  line_detection.cpp  line_detection.h  main.cpp  prediction.h  utils.h  yolo_detection.cpp  yolo_detection.h
